# absurdotron

./: README.md  TODO.md  hello.txt  pyproject.toml
src/basm/: __init__.py
src/basm/eval/: __init__.py  ast.py  ast_.py  memory.py
src/basm/opcodes/: __init__.py  add.py  and_.py  arr_load.py  arr_store.py  assign.py  calleq.py  callge.py  callgt.py  callle.py  calllt.py  callneq.py  callz.py  copy.py  divmod.py  init.py  move.py  mul.py  not_.py  or_.py  sub.py  utils.py  xor.py
src/basm/parser/: __init__.py  base.py  basm.py
src/bfrun/simple/: executor.py  memory.py  utils.py
src/ir/: __init__.py
src/ir/bfgen/: __init__.py  assembler.py  code.py  generator.py  pointer.py
src/ir/exceptions/: __init__.py  base.py  loops.py  tokens.py
src/ir/tokens/: __init__.py  base.py  commands.py  injection.py  utils.py
src/ir/tools/: __init__.py  auto_complete.py  build_map.py
src/memoptix/: __init__.py
src/memoptix/constraints/: __init__.py  array_.py  base.py  index.py  link.py  unit.py  utils.py
src/memoptix/exceptions/: __init__.py  allocator.py  base.py  constraints.py
src/memoptix/metainfo/: __init__.py  free.py  meta.py  scope.py  utils.py
src/xbf/: __init__.py
tests/bfrun/: simple.py
tests/ir/: bfgen.py  tokens.py  utils.py
tests/memoptix/: metainfo.py
tests/xbf/: add.py  and_.py  arr_load.py  arr_store.py  assign.py  calleq.py  callge.py  callgt.py  callle.py  calllt.py  callneq.py  callz.py  clear.py  copy.py  display.py  div.py  divmod.py  input.py  lshift.py  migrate.py  mod.py  move.py  mul.py  not_.py  or_.py  rshift.py  sub.py  utils.py  xor.py
(+108 files in other folders)
