[tool.poetry]
name = "absurdotron"
version = "0.1.0"
description = "A generic compiler from assembly language to BrainFuck."
authors = [
    "snorflib"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
attrs = "^23.2.0"
bidict = "^0.23.1"
pyperclip = "^1.8.2"
mip = "^1.15.0"
numpy = "^1.26.4"
typeguard = "^4.3.0"
multimethod = "^1.12"
multipledispatch = "^1.0.0"
pyparsing = "^3.1.2"
aiogram = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
mypy = "^1.8.0"
ruff = "^0.2.2"

[tool.mypy]
strict = true
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true
disable_error_code = []

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
lint.ignore = [
  "B008",
  "C901",
  "W191",
  "UP007",
  "UP006",
]
lint.select = [
  "E",
  "W",
  "F",
  "I",
  "C",
  "B",
  "UP",
]
exclude = [".venv"]

[tool.pytest.ini_options]
python_files = "tests/*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
requires-python = ">=3.11,<3.13"
